fixed whitespace in umi content

--- a/css/_inc/components/_umi-content.sass
+++ b/css/_inc/components/_umi-content.sass
@@ -80,7 +80,7 @@
 
         main
           line-height: 1.7
-          white-space: pre-line
+          //white-space: pre-line
           font:
             size: rem(13px)
 
